Added some more GUI features to analyze.py.

--- a/data/parameters.cfg
+++ b/data/parameters.cfg
@@ -6,8 +6,9 @@ drive_freq = 300e3
 n_pixels = 128
 
 [Processing]
-roi = 0.5e-3
+roi = 0.3e-3
 window = blackman
 bandpass_filter = 1
 filter_bandwidth = 10e3
 n_taps = 999
+wavelet_analysis = 0
