--- a/data/parameters.cfg
+++ b/data/parameters.cfg
@@ -10,5 +10,7 @@ roi = 0.3e-3
 window = blackman
 bandpass_filter = 1
 filter_bandwidth = 10e3
-n_taps = 999
+n_taps = 1799
+recombination = 0
 wavelet_analysis = 0
+wavelet_parameter = 5
