--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ python:
   - '3.7'
   - '3.8'
 before_install:
-  - pip  install coveralls
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
+  - pip  install coverage
+  - export PYTHONPATH=$PYTHONPATH:$(pwd)
 install: python setup.py install
 script: coverage run --source ffta setup.py test
 stages:
