--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ before_install:
   - python --version
   - pip install -U pip
   - pip install -U pytest
-  - pip  install coverage
+  - pip install coveralls
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 install: python setup.py install
-script: coverage run --source ffta setup.py test
+script: 
+  - coverage run --source=ffta pytest tests/
 stages:
 after_success:
   - coverage report -m
