--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: python
 python:
   - '3.7'
-  - '3.8'
 before_install:
   - python --version
   - pip install -U pip
   - pip install -U pytest
   - pip install coveralls
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
-install: python setup.py install
+install: 
+  - python setup.py install
 script: 
-  - coverage run --source=ffta pytest tests/
+  - coverage run --source=ffta pytest tests
 stages:
 after_success:
   - coverage report -m
