--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 install: 
   - python setup.py install
 script: 
-  - coverage run --source=ffta pytest tests
+  - coverage run --source=ffta pytest /tests
 stages:
 after_success:
   - coverage report -m
