--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,13 @@ before_install:
   - python --version
   - pip install -U pip
   - pip install -U pytest
+  - pip install coverage
   - pip install coveralls
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 install: 
   - python setup.py install
 script: 
-  - coverage run --source=ffta pytest /tests
+  - coverage run --source=ffta -m pytest tests/
 stages:
 after_success:
   - coverage report -m
