--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - pip install -U pytest
   - pip install coverage
   - pip install coveralls
+  - pip install numpy>=1.18.1
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 install: 
   - python setup.py install
