--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ deploy:
   username: __token__
   password:
     secure: $PYPITOKEN
-  distributions: "sdist bdist_wheel"
+  distributions: sdist bdist_wheel
   on:
     tags: true
