--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,11 @@ fabric.properties
 notebooks/.ipynb_checkpoints/FFtrEFM basic processing-checkpoint.ipynb
 
 notebooks/.ipynb_checkpoints/
+
+docs/mdmo/CalCurve.png
+
+docs/mdmo/Calibration_Curve.csv
+
+docs/mdmo/FF04_Calibrated_DataSet_full.png
+
+docs/mdmo/FF04_SVD_Abundance_Maps.png
