--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 - pip install decorator>=5.0.7
 - pip uninstall numpy -y
 - pip install numpy>=1.18.1
+- pip install importlib-metadata>=0.23
 - export PYTHONPATH=$PYTHONPATH:$(pwd)
 install:
 - python setup.py install
