--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,15 +17,28 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run:
+      run: |
+        sudo apt-get update -qq
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest coveralls
         pip install -r requirements.txt
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: install package
+      run: |
+        pip install .
+        pip list
+    
     - name: Lint with flake8
       run: |
         flake8 .
       continue-on-error: true  
-      
+    - name: Test with pytest
+      run: |
+        pip install pytest
+        pip install pytest-cov
+        pip install coveralls
+        coverage run --source=ffta -m pytest tests/
+
     - name: Publish distribution
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
