--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,9 +38,10 @@ jobs:
         pip install pytest-cov
         pip install coveralls
         coverage run --source=ffta -m pytest tests/
+        coveralls
     
     - name: Publish to coveralls.io
-      uses: coverallsapp/github-action@v1.1.2
+      uses: coverallsapp/github-action@v1.1.3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: coverage.xml
