--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,7 +41,7 @@ jobs:
         coveralls
     
     - name: Publish to coveralls.io
-      uses: coverallsapp/github-action@v1.1.3
+      uses: coverallsapp/github-action@1.1.3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: coverage.xml
