--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,12 +4,13 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9"]
-
+    env: 
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
     steps:
     - uses: actions/checkout@v3  
     - name: Set up Python
