--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,20 +33,20 @@ jobs:
       run: |
         flake8 .
       continue-on-error: true  
+      
     - name: Test with pytest
       run: |
         pip install pytest
         pip install pytest-cov
         pip install coveralls
         coverage run --source=ffta -m pytest tests/
-        coveralls
+        coveralls --service=github
     
     - name: Publish to coveralls.io
       uses: coverallsapp/github-action@1.1.3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: coverage.xml
-
 
     - name: Publish distribution
       if: startsWith(github.ref, 'refs/tags')
