--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,9 +42,15 @@ jobs:
         coverage run --source=ffta -m pytest tests/
         coveralls --service=github
 
-    - name: Publish distribution
+    - name: Build and publish distribution
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
+
