--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,13 +44,11 @@ jobs:
 
     - name: Build and publish distribution
       if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      env:
+        PYPI_TOKEN_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+        twine upload --username "__token__" --password $PYPI_TOKEN_PASSWORD dist/*
 
