--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -50,5 +50,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         python setup.py sdist bdist_wheel
-        twine upload --username "__token__" --password $PYPI_TOKEN_PASSWORD dist/*
+        pythong3 -m twine upload --username "__token__" --password $PYPI_TOKEN_PASSWORD dist/*
 
